added breathe link

--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
                     <blockquote>An analysis of GroupMe's iOS app UI</blockquote>
                 </li>
                 <li>
-                    <a href="https://www.discoverbreathe.com/">
+                    <a href="https://github.com/anjalijustice/Breathe/">
                     <img src="img/breathe5.jpg" alt="project box" class="project-box">
                     <p>A New App for Breathe Fest</p>
                     </a>
-                    <blockquote>Work in Progress</blockquote>
+                    <blockquote>Easy access to all things Breathe</blockquote>
                 </li>
             </ul>
         </div>
