--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         </header>
 
         <section>
-            <h1 class="hide-desktop">Hey, I'm Anjali</h1>
+            <h1 class="hide-desktop">I'm Anjali</h1>
             <h1 class="hide-mobile">Anjali Justice</h1>
-            <p class="subhead">Software Engineer.UI Designer.Web Developer</p>
+            <p class="subhead">Software Engineer.Pilot.Adventurer</p>
         </section>
     </div>
 
