--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <header>
-            <img src="img/logo.png" alt="logo" class="logo">
+            <img src="img/planeLogo.png" alt="logo" class="logo">
             <nav>
                 <a href="#" class="hide-desktop">
                     <img src="img/menu.svg" alt="menu" class="menu" id="menu">
@@ -20,7 +20,7 @@
                     <li id="exit" class="exit-btn hide-desktop"><img src="img/exit.svg" alt="exit menu"></li>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="travel.html">Travel</a></li>
+                    <li><a href="blog.html">Blog</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
@@ -35,34 +35,34 @@
             
             <ul class="outer-list">
                 <li>
-                    <h3>Engineering and Design</h3>
-                    <p>I am a senior studying computer science engineering at the University of Michigan with 
-                        a special interest in front end web development and UX design. I have explored these 
-                        interests through my courses at Michigan, independently studying different languages 
-                        and methods of design, and creating my own websites and apps. What I love most about 
-                        front end development and UX design is that I get to influence what the user sees and 
+                    <h3>Engineering</h3>
+                    <p>I am a graduate of the University of Michigan with a BSE in computer science engineering, in September 2020 I
+                        will begin working at Amazon as a software development engineer in the Bay Area and I couldn't be more excited!
+                        My focus is in front end development and design and I have devoted much of my independent study outside
+                        of college classes to learning different languages and developing apps and websites.
+                        What I love most about front end development and UX design is that I get to influence what the user sees and 
                         how they interact with a product. I am always trying to find ways to incorperate design 
-                        and development into projects that I am passionate about..</p>
+                        and development into projects that I am passionate about.</p>
                 </li>
                 <li>
                     <h3>Aviation</h3>
                     <p>My desire to become a pilot was sparked after my freshman year of college, I applied for 
                         a job at an airport and fell in love with the community and the freedom of being an aviator. 
-                        I am now a student at Kalitta Flight School and intend to earn all of my ratings until I 
-                        am a certified airline pilot. Flight training has taught me to be diligent and pay attention 
-                        to details, I have learned to be resourseful and think on my feet both in the air and on 
-                        the ground. As someone who loves to travel and see the world from a different perspective, 
-                        there is nothing I love more than being able to get into my Cessna and take to the skies.</p>                       
+                        I am now a private pilot and intend to continue my training until I am a commercial pilot. 
+                        Flight training has taught me to be diligent and pay attention to details, I have learned 
+                        to be resourseful and think on my feet both in the air and on the ground. As someone who 
+                        loves to travel and see the world from a different perspective, there is nothing I love 
+                        more than being able to get into my Cessna and take to the skies.</p>                       
                 </li>
                 <li>
                     <h3>Personal</h3>
                     <p>As a full time student of both engineering and aviation finding free time can be difficult. 
                         But I always take any opportunity I can to have fun and enjoy time with friends. Some of my
-                         favorite things to do are slackline, hike, run, and travel. I have been fortunate enough to 
+                         favorite things to do are slackline, hike, and travel. I have been fortunate enough to 
                          find amazing people to share these experienes with who support me in whatever I do. I am 
-                         also a musician- Having been classically trained in piano for 13 years and many other instruments 
+                         also a musician- having been classically trained in piano for 13 years and many other instruments 
                          throughout middle and high school, I love to get involved with music whenever possible in college.
-                          As a member of Groove High Energy Percussion I am able to express myself through music, enjoy the 
+                          As a member of Groove High Energy Percussion at UMich I am able to express myself through music, enjoy the 
                           company of some dope people, and have a ton of fun collaborating and creating great shows each semester. </p>                        
                 </li>
             </ul>
@@ -73,14 +73,13 @@
     </div>
 
     <footer>
-        <div class="footer-container">
-            <div class="container">
-                <ul class="linkedin">
-                    <li><a href="https://www.linkedin.com/in/anjalijustice">linkedin.com/in/anjalijustice</a></li>
-                    <li><a href="https://www.gmail.com">justanj@umich.edu</a></li>
-                    <li><a href="AnjaliResume2019.pdf">View my Resume</a></li>
-                </ul>
-            </div>
+        <div class="container">
+            <ul class="footer-list">
+                <li><a href="https://www.linkedin.com/in/anjalijustice"><img src="img/linkedin.png" class="footer-icon"></a></li>
+                <li><a href="https://www.gmail.com"><img src="img/gmail.png" class="footer-icon"></a></li>
+                <li><a href="https://www.github.com/anjalijustice"><img src="img/github.svg" class="footer-icon"></a></li>
+                <li><a href="AnjaliResume2019.pdf"><img src="img/resume.png" class="footer-icon"></a></li>
+            </ul>
         </div>
     </footer>
 </body>
