--- a/index.html
+++ b/index.html
@@ -8,75 +8,73 @@
     <link rel="stylesheet" href="style/main.css">
 </head>
 <body>
-    <div class="container">
-        <header>
-            <img src="img/logo.png" alt="logo" class="logo">
-            <nav>
-                <a href="#" class="hide-desktop">
-                    <img src="img/menu.svg" alt="menu" class="menu" id="menu">
-                </a>    
-
-                <ul class="show-desktop hide-mobile" id="nav">
-                    <li id="exit" class="exit-btn hide-desktop"><img src="img/exit.svg" alt="exit menu"></li>
-                    <li id="list"><a href="index.html">Home</a></li>
-                    <li id="list"><a href="about.html">About</a></li>
-                    <li id="list"><a href="travel.html">Travel</a></li>
-                    <li id="list"><a href="contact.html">Contact</a></li>
-                </ul>
-            </nav>
-        </header>
-
-        <section>
-            <h1 class="hide-desktop">I'm Anjali</h1>
-            <h1 class="hide-mobile">Anjali Justice</h1>
-            <p class="subhead">Software Engineer . Pilot . Adventurer</p>
-        </section>
-    </div>
-
-    <div class="picture-container">
-        <img src="img/img8.jpg" class="main-img" alt="img">
-    </div>
-
-    <div class="projects-container">
+    <div class="content">
         <div class="container">
-            <h1>Projects</h1>
-            <ul>
-                <li>
-                    <a href="https://medium.com/@justanj/venmo-group-redesign-cca41b78c4e3?postPublishedType=repub">
-                    <img src="img/venmo.png" alt="project-box" class="project-box">
-                    <p>Venmo UI Redesign</p>
-                    </a>
-                    <blockquote>Payments for groups made easy</blockquote>
-                </li>
-                <li>  
-                    <a href="https://medium.com/@justanj/groupme-ios-app-design-critique-1493932327de?postPublishedType=initial">
-                    <img src="img/goupme.png" alt="project box" class="project-box">
-                    <p>GroupMe Design Critique</p>
-                    </a>
-                    <blockquote>An analysis of GroupMe's iOS app UI</blockquote>
-                </li>
-                <li>
-                    <a href="https://github.com/anjalijustice/Breathe/">
-                    <img src="img/breathe5.jpg" alt="project box" class="project-box">
-                    <p>A New App for Breathe Fest</p>
-                    </a>
-                    <blockquote>Easy access to all things Breathe</blockquote>
-                </li>
-            </ul>
+            <header>
+                <img src="img/planeLogo.png" alt="logo" class="logo">
+                <nav>
+                    <a href="#" class="hide-desktop">
+                        <img src="img/menu.svg" alt="menu" class="menu" id="menu">
+                    </a>    
+
+                    <ul class="show-desktop hide-mobile" id="nav">
+                        <li id="exit" class="exit-btn hide-desktop"><img src="img/exit.svg" alt="exit menu"></li>
+                        <li id="list"><a href="index.html">Home</a></li>
+                        <li id="list"><a href="about.html">About</a></li>
+                        <li id="list"><a href="blog.html">Blog</a></li>
+                        <li id="list"><a href="contact.html">Contact</a></li>
+                    </ul>
+                </nav>
+            </header>
+
+            <section>
+                <h1 class="hide-desktop">I'm Anjali</h1>
+                <h1 class="hide-mobile">Anjali Justice</h1>
+                <p class="subhead">Software Engineer . Pilot . Adventurer</p>
+            </section>
         </div>
-    </div>
-    
-    <footer>
-        <div class="footer-container">
+
+        <div class="picture-container">
+            <img src="img/img8.jpg" class="main-img" alt="img">
+        </div>
+
+        <div class="projects-container">
             <div class="container">
-                <a href="contact.html" class="cta">Contact Me</a>
-                <hr>
-                <ul class="linkedin">
-                    <li><a href="https://www.linkedin.com/in/anjalijustice">linkedin.com/in/anjalijustice</a></li>
-                    <li><a href="https://www.gmail.com">justanj@umich.edu</a></li>
-                    <li><a href="AnjaliResume2019.pdf">View my Resume</a></li>
+                <h1>Featured Blog Posts</h1>
+                <ul>
+                    <li>
+                        <a href="https://medium.com/@justanj/venmo-group-redesign-cca41b78c4e3?postPublishedType=repub">
+                        <img src="img/venmo.png" alt="project-box" class="project-box">
+                        <p>Venmo UI Redesign</p>
+                        </a>
+                        <blockquote>Payments for groups made easy</blockquote>
+                    </li>
+                    <li>  
+                        <a href="https://medium.com/@justanj/groupme-ios-app-design-critique-1493932327de?postPublishedType=initial">
+                        <img src="img/groupme.png" alt="project box" class="project-box">
+                        <p>GroupMe Design Critique</p>
+                        </a>
+                        <blockquote>An analysis of GroupMe's iOS app UI</blockquote>
+                    </li>
+                    <li>
+                        <a href="https://github.com/anjalijustice/Breathe/">
+                        <img src="img/breathe5.jpg" alt="project box" class="project-box">
+                        <p>A New App for Breathe Fest</p>
+                        </a>
+                        <blockquote>Easy access to all things Breathe</blockquote>
+                    </li>
                 </ul>
             </div>
+        </div>  
+    </div>
+    <footer>
+        <div class="container">
+            <ul class="footer-list">
+                <li><a href="https://www.linkedin.com/in/anjalijustice"><img src="img/linkedin.png" class="footer-icon"></a></li>
+                <li><a href="https://www.gmail.com"><img src="img/gmail.png" class="footer-icon"></a></li>
+                <li><a href="https://www.github.com/anjalijustice"><img src="img/github.svg" class="footer-icon"></a></li>
+                <li><a href="AnjaliResume2019.pdf"><img src="img/resume.png" class="footer-icon"></a></li>
+            </ul>
         </div>
     </footer>
 </body>
