--- a/index.html
+++ b/index.html
@@ -14,11 +14,10 @@
                 <img src="img/planeLogo.png" alt="logo" class="logo">
                 <nav>
                     <a href="#" class="hide-desktop">
-                        <img src="img/menu.svg" alt="menu" class="menu" id="menu">
+                        <img src="img/menu.png" alt="menu" class="menu" id="menu">
                     </a>    
 
                     <ul class="show-desktop hide-mobile" id="nav">
-                        <li id="exit" class="exit-btn hide-desktop"><img src="img/exit.svg" alt="exit menu"></li>
                         <li id="list"><a href="index.html">Home</a></li>
                         <li id="list"><a href="about.html">About</a></li>
                         <li id="list"><a href="blog.html">Blog</a></li>
