--- a/index.html
+++ b/index.html
@@ -44,16 +44,22 @@
                 <ul>
                     <li>
                         <a href="https://medium.com">
-                        <img src="img/planeLogo.png" alt="blog-box" class="blog-box">
+                        <img src="img/planeLogo.png" alt="project-box" class="project-box">
                         <p>Pending</p>
                         </a>
+
                     </li>
                     <li>
                         <a href="https://github.com/anjalijustice/Breathe/">
                         <img src="img/breathe5.jpg" alt="project box" class="project-box">
                         <p>A New App for Breathe Fest</p>
                         </a>
-                        <blockquote>Easy access to all things Breathe</blockquote>
+                    </li>
+                    <li>
+                        <a href="https://medium.com/@justanj/venmo-group-redesign-cca41b78c4e3?postPublishedType=repub">
+                        <img src="img/venmo.png" alt="project-box" class="project-box">
+                        <p>Venmo UI Redesign</p>
+                        </a>
                     </li>
                 </ul>
             </div>
