about image fix

--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
             </ul>
         </div>
         <div class="image-container">
-            <img src="img/img2b.jpg" alt="img" class="hide-mobile">
+            <img src="img/img2.jpg" alt="img" class="hide-mobile">
         </div>
     </div>
 
