--- a/blog.html
+++ b/blog.html
@@ -34,6 +34,12 @@
         <div class="container">
             <ul>
                 <li>
+                    <a href="https://medium.com/@anjalijustice/building-a-home-8625757dba7">
+                    <img src="img/building-a-home.jpeg" alt="blog-box" class="blog-box">
+                    <p>Building a Home</p>
+                    </a>
+                </li>
+                <!-- <li>
                     <a href="https://medium.com">
                     <img src="img/planeLogo.png" alt="blog-box" class="blog-box">
                     <p>Pending</p>
@@ -44,13 +50,7 @@
                     <img src="img/planeLogo.png" alt="blog-box" class="blog-box">
                     <p>Pending</p>
                     </a>
-                </li>
-                <li>
-                    <a href="https://medium.com">
-                    <img src="img/planeLogo.png" alt="blog-box" class="blog-box">
-                    <p>Pending</p>
-                    </a>
-                </li>
+                </li> -->
             </ul>
         </div>
     </div>
