--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
                 <h1>Featured Blog Posts</h1>
                 <ul>
                     <li>
-                        <a href="https://medium.com">
-                        <img src="img/planeLogo.png" alt="project-box" class="project-box">
-                        <p>Pending</p>
+                        <a href="https://medium.com/@anjalijustice/building-a-home-8625757dba7">
+                        <img src="img/building-a-home.jpeg" alt="project-box" class="project-box">
+                        <p>Building a Home</p>
                         </a>
 
                     </li>
