--- a/blog.html
+++ b/blog.html
@@ -39,13 +39,13 @@
                     <p>Building a Home</p>
                     </a>
                 </li>
-                <!-- <li>
-                    <a href="https://medium.com">
-                    <img src="img/planeLogo.png" alt="blog-box" class="blog-box">
-                    <p>Pending</p>
+                 <li>
+                    <a href="https://medium.com/@anjalijustice/down-and-dirty-an-in-depth-look-at-my-van-build-728dedc56f2e">
+                    <img src="img/down-and-dirty.jpeg" alt="blog-box" class="blog-box">
+                    <p>Down and Dirty: The details of my build </p>
                     </a>
                 </li>
-                <li>
+                <!--<li>
                     <a href="https://medium.com">
                     <img src="img/planeLogo.png" alt="blog-box" class="blog-box">
                     <p>Pending</p>
