--- a/index.html
+++ b/index.html
@@ -45,22 +45,23 @@
                     <li>
                         <a href="https://medium.com/@anjalijustice/building-a-home-8625757dba7">
                         <img src="img/building-a-home.jpeg" alt="project-box" class="project-box">
-                        <p>Building a Home</p>
+                        <p>Building a Home                              </p>
                         </a>
 
                     </li>
                     <li>
-                        <a href="https://github.com/anjalijustice/Breathe/">
-                        <img src="img/breathe5.jpg" alt="project box" class="project-box">
-                        <p>A New App for Breathe Fest</p>
+                        <a href=https://medium.com/@anjalijustice/down-and-dirty-an-in-depth-look-at-my-van-build-728dedc56f2e>
+                        <img src="img/down-and-dirty.jpeg" alt="project-box" class="project-box">
+                        <p>Down and Dirty: The details of my build</p>
                         </a>
                     </li>
                     <li>
-                        <a href="https://medium.com/@justanj/venmo-group-redesign-cca41b78c4e3?postPublishedType=repub">
-                        <img src="img/venmo.png" alt="project-box" class="project-box">
-                        <p>Venmo UI Redesign</p>
+                        <a href="https://github.com/anjalijustice/Breathe/">
+                        <img src="img/breathe5.jpg" alt="project box" class="project-box">
+                        <p>A New App for Breathe Fest                   </p>
                         </a>
                     </li>
+                    
                 </ul>
             </div>
         </div>  
