--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <li>
                         <a href=https://medium.com/@anjalijustice/down-and-dirty-an-in-depth-look-at-my-van-build-728dedc56f2e>
                         <img src="img/down-and-dirty.jpeg" alt="project-box" class="project-box">
-                        <p>Down and Dirty: The details of my build</p>
+                        <p>Down and Dirty: The details of my van build</p>
                         </a>
                     </li>
                     <li>
