--- a/blog.html
+++ b/blog.html
@@ -42,7 +42,7 @@
                  <li>
                     <a href="https://medium.com/@anjalijustice/down-and-dirty-an-in-depth-look-at-my-van-build-728dedc56f2e">
                     <img src="img/down-and-dirty.jpeg" alt="blog-box" class="blog-box">
-                    <p>Down and Dirty: The details of my build </p>
+                    <p>Down and Dirty: The details of my van build </p>
                     </a>
                 </li>
                 <!--<li>
