--- a/about.html
+++ b/about.html
@@ -51,19 +51,19 @@
                         I am now a private pilot and intend to continue my training until I am a commercial pilot. 
                         Flight training has taught me to be diligent and pay attention to details, I have learned 
                         to be resourseful and think on my feet both in the air and on the ground. As someone who 
-                        loves to travel and see the world from a different perspective, there is nothing I love 
-                        more than being able to get into my Cessna and take to the skies.</p>                       
+                        loves to travel and seeing the world from a different perspective, there is nothing I love 
+                        more than being able to get into the cockpit take to the skies.</p>                       
                 </li>
                 <li>
                     <h3>Personal</h3>
-                    <p>As a full time student of both engineering and aviation finding free time can be difficult. 
-                        But I always take any opportunity I can to have fun and enjoy time with friends. Some of my
+                    <p>  When working a full time job from home it can be difficult to separate work from regular life,
+                         but I always take any opportunity I can to have fun and enjoy time with friends. Some of my
                          favorite things to do are slackline, hike, and travel. I have been fortunate enough to 
                          find amazing people to share these experienes with who support me in whatever I do. I am 
                          also a musician- having been classically trained in piano for 13 years and many other instruments 
-                         throughout middle and high school, I love to get involved with music whenever possible in college.
-                          As a member of Groove High Energy Percussion at UMich I am able to express myself through music, enjoy the 
-                          company of some dope people, and have a ton of fun collaborating and creating great shows each semester. </p>                        
+                         throughout middle and high school, I love to get involved with music whenever possible. Recently I
+                         have been traveling with my dog Theo in a van that I built out after college, I have had so many
+                         wonderful experiences from this chapter in my life and am always looking forward to the next one.</p>                        
                 </li>
             </ul>
         </div>
@@ -78,7 +78,7 @@
                 <li><a href="https://www.linkedin.com/in/anjalijustice"><img src="img/linkedin.png" class="footer-icon"></a></li>
                 <li><a href="contact.html"><img src="img/gmail.png" class="footer-icon"></a></li>
                 <li><a href="https://www.github.com/anjalijustice"><img src="img/github.svg" class="footer-icon"></a></li>
-                <li><a href="AnjaliResume2019.pdf"><img src="img/resume.png" class="footer-icon"></a></li>
+                <li><a href="AnjaliJusticeResume2021.pdf"><img src="img/resume.png" class="footer-icon"></a></li>
             </ul>
         </div>
     </footer>
