--- a/blog.html
+++ b/blog.html
@@ -45,12 +45,12 @@
                     <p>Down and Dirty: The details of my van build </p>
                     </a>
                 </li>
-                <!--<li>
+                <li>
                     <a href="https://medium.com">
                     <img src="img/planeLogo.png" alt="blog-box" class="blog-box">
-                    <p>Pending</p>
+                    <p>Life on the Pacific Coast</p>
                     </a>
-                </li> -->
+                </li>
             </ul>
         </div>
     </div>
@@ -61,7 +61,7 @@
                 <li><a href="https://www.linkedin.com/in/anjalijustice"><img src="img/linkedin.png" class="footer-icon"></a></li>
                 <li><a href="contact.html"><img src="img/gmail.png" class="footer-icon"></a></li>
                 <li><a href="https://www.github.com/anjalijustice"><img src="img/github.svg" class="footer-icon"></a></li>
-                <li><a href="AnjaliResume2019.pdf"><img src="img/resume.png" class="footer-icon"></a></li>
+                <li><a href="AnjaliJusticeResume2021.pdf"><img src="img/resume.png" class="footer-icon"></a></li>
             </ul>
         </div>
     </footer>
