--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,7 @@
                 <li><a href="https://www.linkedin.com/in/anjalijustice"><img src="img/linkedin.png" class="footer-icon"></a></li>
                 <li><a href="contact.html"><img src="img/gmail.png" class="footer-icon"></a></li>
                 <li><a href="https://www.github.com/anjalijustice"><img src="img/github.svg" class="footer-icon"></a></li>
-                <li><a href="AnjaliResume2019.pdf"><img src="img/resume.png" class="footer-icon"></a></li>
+                <li><a href="AnjaliJusticeResume2021.pdf"><img src="img/resume.png" class="footer-icon"></a></li>
             </ul>
         </div>
     </footer>
