--- a/blog.html
+++ b/blog.html
@@ -46,9 +46,9 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://medium.com">
-                    <img src="img/planeLogo.png" alt="blog-box" class="blog-box">
-                    <p>Life on the Pacific Coast</p>
+                    <a href="https://anjalijustice.medium.com/life-on-the-road-first-impressions-90d876066a04">
+                    <img src="img/life-on-the-road.jpeg" alt="blog-box" class="blog-box">
+                    <p>Life on the Road</p>
                     </a>
                 </li>
             </ul>
