--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
                 <h1>Featured Blog Posts</h1>
                 <ul>
                     <li>
-                        <a href="https://medium.com/@anjalijustice/building-a-home-8625757dba7">
-                        <img src="img/building-a-home.jpeg" alt="project-box" class="project-box">
-                        <p>Building a Home                              </p>
+                        <a href="https://anjalijustice.medium.com/life-on-the-road-first-impressions-90d876066a04">
+                        <img src="img/life-on-the-road.jpeg" alt="project-box" class="project-box">
+                        <p>Life on the Road                              </p>
                         </a>
 
                     </li>
