--- a/blog.html
+++ b/blog.html
@@ -51,6 +51,12 @@
                     <p>Life on the Road</p>
                     </a>
                 </li>
+                <li>
+                    <a href="https://anjalijustice.medium.com/precious-cargo-63862b02585e">
+                    <img src="img/precious_cargo.jpeg" alt="blog-box" class="blog-box">
+                    <p>Precious Cargo: Vanlife with Theo</p>
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
