--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
                         </a>
                     </li>
                     <li>
-                        <a href="https://github.com/anjalijustice/Breathe/">
-                        <img src="img/breathe5.jpg" alt="project box" class="project-box">
-                        <p>A New App for Breathe Fest                   </p>
+                        <a href="https://anjalijustice.medium.com/precious-cargo-63862b02585e">
+                        <img src="img/precious_cargo.jpg" alt="project box" class="project-box">
+                        <p>Precious Cargo: Vanlife with Theo                   </p>
                         </a>
                     </li>
                     
