--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     </li>
                     <li>
                         <a href="https://anjalijustice.medium.com/precious-cargo-63862b02585e">
-                        <img src="img/precious_cargo.jpg" alt="project box" class="project-box">
+                        <img src="img/precious_cargo.jpeg" alt="project box" class="project-box">
                         <p>Precious Cargo: Vanlife with Theo                   </p>
                         </a>
                     </li>
