minor font updates

--- a/blog.html
+++ b/blog.html
@@ -31,7 +31,7 @@
                 </ul>
             </nav>
         </header>
-        <h1>Blog Posts</h1>
+        <h1 class="section-header">Blog Posts</h1>
     </div>
 
     <!-- Map of locations Ive been to -->
