--- a/mediaKit.html
+++ b/mediaKit.html
@@ -32,6 +32,7 @@
                 </ul>
             </nav>
         </header>
+        <h1 class="section-header">Media Kit</h1>
         <div class="kit-container">
             <a href="/img/mediaKit.jpg" download="anjaliJusticeMediaKit">
                 <img src="/img/mediaKit.jpg">
