--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
 
         <div class="about-container">
-            <h1>About Me</h1>
+            <h1 class="section-header">About Me</h1>
             <div class="about-section">
                 <div class="about-text">
                     <h3>Hi there, I'm Anjali.</h3>
@@ -64,7 +64,7 @@
         </div>
         <button class="collab-button"><a href="contact.html">Lets Collaborate!</a></button>
         </div>
-        <div class="instagram-container">
+        <div class="instagram-container hide-mobile">
             <h2>Follow along on instagram</h2>
             <iframe src='https://www.juicer.io/api/feeds/anjalijustice/iframe' frameborder='0' width='100%' height='300px' style='display:block; margin:0 auto;'></iframe>
         </div>
