Update index.html fix typos in about

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
                 <div class="about-text">
                     <h3>Hi there, I'm Anjali.</h3>
                     <br>
-                    <p>I'm a Michigan based digital nomad who lives and travels in my self converted Promaster Van and Uniflite Boat. I explore with with my two dogs Theodore and Remington and share my stories of solo travel, DIY building, and tiny living.</p>
+                    <p>I'm a Michigan based digital nomad who lives and travels in my self converted Promaster Van and vintage boat. I explore with my two dogs Theodore and Remington and share my stories of solo travel, DIY building, and tiny living.</p>
                     <br>
-                    <p>My goal is to inspire others to take on solo travel, vanlife, other unconventional lifestyles no matter how big (or tiny). I hope to build a community of like minded adventurers who support eachothers dreams, spread love, and are excited to share in this journey we're all on together.</p>
+                    <p>My goal is to inspire others to take on solo travel, vanlife, other unconventional lifestyles no matter how big (or tiny). I hope to build a community of like minded adventurers who support each others dreams, spread love, and are excited to share in this journey we're all on together.</p>
                     <br>
                     <p>Come follow along on my adventures!</p>
                 </div>
