--- a/contact.html
+++ b/contact.html
@@ -109,7 +109,7 @@
         <ul class="menu">
           <li class="menu__item"><a class="menu__link" href="/index.html">Home</a></li>
           <li class="menu__item"><a class="menu__link" href="/blog.html">Blog</a></li>
-          <li class="menu__item"><a class="menu__link" href="/mediaKit.html">Media Kit</a></li>
+          <li class="menu__item"><a class="menu__link" href="/mediakit.html">Media Kit</a></li>
           <li class="menu__item"><a class="menu__link" href="/contact.html">Contact</a></li>
     
         </ul>
