update contact form action

--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
                         </a></li>
                 </ul>
             </div>
-            <form action="https://formspree.io/anjalijustice@gmail.com" method="POST" id="contact-form" class="form-horizontal" role="form">
+            <form action="https://formspree.io/f/anjalijustice@gmail.com" method="POST" id="contact-form" class="form-horizontal" role="form">
                 <div class="form-group">
                   <div class="col-sm-12">
                     <span class="form-label">Name</span>
