Update media kit and footer style

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
                     <p>My goal is to inspire others to take on solo travel, vanlife, other unconventional lifestyles no matter how big (or tiny). I hope to build a community of like minded adventurers who support each others dreams, spread love, and are excited to share in this journey we're all on together.</p>
                     <br>
                     <p>Come follow along on my adventures!</p>
+                    <br>
+                    <button class="collab-button"><a href="about.html">More about me</a></button>
                 </div>
                 <div class="about-img">
                     <img src="img/about.jpg" class="hide-mobile" id="profile-img" alt="img">
