--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <aside class="sidebar hide-desktop">
                 <nav>
                     <div><a href="index.html">Home</a></div>
+                    <div><a href="about.html">About Me</a></div>
                     <div><a href="blog.html">Blog</a></div>
                     <div><a href="mediakit.html">Media Kit</a></div>
                     <div><a href="contact.html">Contact</a></div>
@@ -26,6 +27,7 @@
             <nav>
                 <ul class="hide-mobile" id="nav">
                     <li id="list"><a href="index.html">Home</a></li>
+                    <li id="list"><a href="about.html">About Me</a></li>
                     <li id="list"><a href="blog.html">Blog</a></li>
                     <li id="list"><a href="mediakit.html">Media Kit</a></li>
                     <li id="list"><a href="contact.html">Contact</a></li>
