--- a/mediakit.html
+++ b/mediakit.html
@@ -18,6 +18,7 @@
             <aside class="sidebar hide-desktop">
                 <nav>
                     <div><a href="index.html">Home</a></div>
+                    <div><a href="about.html">About Me</a></div>
                     <div><a href="blog.html">Blog</a></div>
                     <div><a href="mediakit.html">Media Kit</a></div>
                     <div><a href="contact.html">Contact</a></div>
@@ -26,18 +27,19 @@
             <nav>
                 <ul class="hide-mobile" id="nav">
                     <li id="list"><a href="index.html">Home</a></li>
+                    <li id="list"><a href="about.html">About Me</a></li>
                     <li id="list"><a href="blog.html">Blog</a></li>
                     <li id="list"><a href="mediakit.html">Media Kit</a></li>
                     <li id="list"><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </header>
-        <h1 class="section-header">Media Kit</h1>
-        <div class="kit-container">
-            <a href="/img/mediaKit.jpg" download="anjaliJusticeMediaKit">
-                <img src="/img/mediaKit.jpg">
-            </a>
-        </div>
+        <div style="width: 100%; height: 0; padding-top: 231.9180%;
+            padding-bottom: 0; margin-top: .3em; margin-bottom: 0; overflow: hidden; will-change: transform;">
+            <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+                src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF26WK6RbQ&#x2F;view?embed" >
+            </iframe>
+    </div>
     </div>
 
     <footer class="footer">
