update contact and about me pages + some style cleanup

--- a/about.html
+++ b/about.html
@@ -34,12 +34,18 @@
                 </ul>
             </nav>
         </header>
-        <div style="width: 100%; height: 0; padding-top: 56.2225%;
- padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: .3em; margin-bottom: 0; overflow: hidden; will-change: transform;">
-  <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
-    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF4SbsP-w4&#x2F;view?embed">
-  </iframe>
-</div>
+        <h1 class="section-header">Hi I'm Anjali</h1>
+    </div>
+
+    <div class="about-container">
+        <p>I'm a US based digital nomad who lives and travels in my self converted Promaster van. I explore the country with my two dogs, Theodore and Remington, and share my stories of solo travel, DIY van building, and tiny living with my pups.
+        </p>
+        <br>
+        <p>My goal is to inspire others to take on unconventional lifestyles no matter how big (or tiny) and live life to the fullest. My community is full of outdoorsy people who are interested in vanlife, solo travel, and working on the road. I am always looking to make connections with new people and find lasting friendships on the road!
+        </p>
+        <br>
+        <br>
+        <img src="/img/about.png" alt="">
     </div>
 
     <footer class="footer">
