--- a/index.html
+++ b/index.html
@@ -60,19 +60,21 @@
             </div>
         </div>  
         <div class="collab-container">
-        <h2>Lets work together!</h2>
-        <div class="collab-blurb">
-            <p>I'm always looking to collaborate with people and brands that align with my values and community. I want to provide my audience genuine recommendations for products that I believe in, and I love finding new stuff to bring to my followers.</p>
-            <br>
-            <p>Interested in working together on a project?</p>
+            <h2>Lets work together!</h2>
+            <div class="collab-blurb">
+                <p>I'm always looking to collaborate with people and brands that align with my values and community. I want to provide my audience genuine recommendations for products that I believe in, and I love finding new stuff to bring to my followers.</p>
+                <br>
+                <p>Interested in working together on a project?</p>
+                <br>
+                <button class="collab-button"><a href="contact.html">Lets Collaborate!</a></button>
+                <br>
+            </div>
         </div>
-        <button class="collab-button"><a href="contact.html">Lets Collaborate!</a></button>
-        </div>
-        <div class="instagram-container hide-mobile">
+        <!-- <div class="instagram-container hide-mobile">
             <h2>Follow along on instagram</h2>
             <iframe src='https://www.juicer.io/api/feeds/anjalijustice/iframe' frameborder='0' width='100%' height='300px' style='display:block; margin:0 auto;'></iframe>
         </div>
-    </div>
+    </div> -->
     <footer class="footer">
         <ul class="footer-social-icon">
             <li class="footer-social-icon__item"><a class="footer-social-icon__link" href="https://instagram.com/anjalijustice">
