--- a/contact.html
+++ b/contact.html
@@ -34,9 +34,50 @@
                 </ul>
             </nav>
         </header>
+        <h1 class="section-header">Get in Touch!</h1>
     </div>
     <section id="contact">
-        <h1 class="section-header">Contact</h1> 
+        <div class="contact-container">
+            <form action="https://api.web3forms.com/submit" method="POST" class="contact-left">
+                <div class="contact-left-title"> 
+                </div>
+                <input type="hidden" name="access_key" value="b2fe3b29-1ab3-4600-b302-099a3314a0b0">
+                <input type="text" name="name" placeholder="Your Name" class="contact-inputs" required>
+                <input type="email" name="email" placeholder="Your Email" class="contact-inputs" required>
+                <textarea name="message" placeholder="Your Message" class="contact-inputs" required></textarea>
+                <button type="submit">Submit</button>
+            </form>
+            <div class="contact-right">
+                <p>
+                    If you have questions, want to chat, or are inquiring about a brand collaboration I would love to hear from you! Send me a message using this form and I'll email you back shortly.
+                    <br>
+                    <br>
+                    Looking to collab? Please provide as much information as possible so I can serve you best.
+                    <br>
+                    <br>
+                    You can also connect with me on social media!
+                </p>
+                <ul class="social-icon">
+                    <li class="social-icon__item"><a class="social-icon__link" style="color: #E1306C" href="https://instagram.com/anjalijustice">
+                        <ion-icon name="logo-instagram"></ion-icon>
+                        </a></li>
+                    <li class="social-icon__item"><a class="social-icon__link" style="color: #FF0000" href="https://youtube.com/@anjalijustice">
+                        <ion-icon name="logo-youtube"></ion-icon>
+                        </a></li>
+                    <li class="social-icon__item"><a class="social-icon__link" style="color: #E60023" href="https://pinterest.com/anjalijustice">
+                        <ion-icon name="logo-pinterest"></ion-icon>
+                        </a></li>
+                    <li class="social-icon__item"><a class="social-icon__link" style="color: #4267B2" href="https://facebook.com/anjalijusticevanlife">
+                        <ion-icon name="logo-facebook"></ion-icon>
+                        </a></li>
+                </ul>
+                <br>
+                <br>
+                <img src="img/logo.png" alt="">
+            </div>
+        </div>
+
+        <!-- <h1 class="section-header">Contact</h1> 
         <div class="contact-wrapper">  
             <div class="contact-blurb">
                 <h1>Send me a message!</h1>
@@ -66,9 +107,12 @@
                 </ul>
             </div>
             <div class="form-group">
+                
+            </div>
+            <div class="form-group">
                 <script type="text/javascript" src="https://form.jotform.com/jsform/241585151937159"></script>
             </div>
-        </div>
+        </div> -->
         
       </section>  
     <footer class="footer">
